--- a/danhmuc-full.html
+++ b/danhmuc-full.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản lý danh mục - SellerHub</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/danhmuc.css" />
   </head>
   <body>
     <div class="app">
@@ -459,8 +460,10 @@
     </div>
 
     <script src="js/scrip.js"></script>
+    <script src="js/update-category-counts.js"></script>
     <script src="js/category.js"></script>
     <script src="js/user-info.js"></script>
     <script src="js/sidebar-preserve.js"></script>
+    <script src="js/store-status.js"></script>
   </body>
 </html>
