--- a/flashsale-full.html
+++ b/flashsale-full.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flash Sale - SellerHub</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/forms.css" />
   </head>
   <body>
     <div class="app">
@@ -287,6 +288,7 @@
     <script src="js/action-menu.js"></script>
     <script src="js/flashsale.js"></script>
     <script src="js/sidebar-preserve.js"></script>
+    <script src="js/store-status.js"></script>
   </body>
 </html>
 
