--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Dashboard Dark</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/forms.css" />
   </head>
   <body>
     <div class="app">
@@ -548,6 +549,7 @@
     <script src="js/scrip.js"></script>
     <script src="js/user-info.js"></script>
     <script src="js/sidebar-preserve.js"></script>
+    <script src="js/store-status.js"></script>
     <script>
       // Kiểm tra đăng nhập khi trang load
       document.addEventListener("DOMContentLoaded", () => {
