--- a/khachhang-full.html
+++ b/khachhang-full.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản lý khách hàng - SellerHub</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/khachhang.css" />
   </head>
   <body>
     <div class="app">
@@ -591,6 +592,7 @@
     <script src="js/action-menu.js"></script>
     <script src="js/khachhang.js"></script>
     <script src="js/sidebar-preserve.js"></script>
+    <script src="js/store-status.js"></script>
   </body>
 </html>
 
