--- a/khuyenmai-full.html
+++ b/khuyenmai-full.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Khuyến mãi & Voucher - SellerHub</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/forms.css" />
   </head>
   <body>
     <div class="app">
@@ -636,6 +637,7 @@
     <script src="js/user-info.js"></script>
     <script src="js/action-menu.js"></script>
     <script src="js/sidebar-preserve.js"></script>
+    <script src="js/store-status.js"></script>
     <script src="js/khuyenmai.js"></script>
   </body>
 </html>
