--- a/vanchuyen-full.html
+++ b/vanchuyen-full.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vận chuyển - SellerHub</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/forms.css" />
   </head>
   <body>
     <div class="app">
@@ -352,6 +353,9 @@
     <script src="js/user-info.js"></script>
     <script src="js/action-menu.js"></script>
     <script src="js/sidebar-preserve.js"></script>
+    <script src="js/store-status.js"></script>
     <script src="js/vanchuyen.js"></script>
   </body>
 </html>
+
+
