--- a/tonkho-full.html
+++ b/tonkho-full.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản lý tồn kho - SellerHub</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/forms.css" />
     <link rel="stylesheet" href="./css/tonkho.css" />
   </head>
   <body>
@@ -299,5 +300,6 @@
     <script src="js/tonkho.js"></script>
     <script src="js/user-info.js"></script>
     <script src="js/sidebar-preserve.js"></script>
+    <script src="js/store-status.js"></script>
   </body>
 </html>
